--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 dashmap = "6.1.0"
+streaming-iterator = "0.1.9"
 tokio = { version = "1.42.0", features = ["full"] }
 tower-lsp = "0.20.0"
 tracing = "0.1.41"
