--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -4,7 +4,7 @@ on:
   push:
 
 jobs:
-  build:
+  checks:
 
     runs-on: ubuntu-latest
 
@@ -13,7 +13,7 @@ jobs:
     - name: Clippy
       run: cargo clippy
     - name: Tests
-      run: cargo test --verbose
+      run: cargo test
     - name: Fmt
       run: cargo fmt --check
 
