--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 
 [dependencies]
 dashmap = "6.1.0"
+serde = "1.0.218"
+serde_json = "1.0.140"
 streaming-iterator = "0.1.9"
 tempfile = "3.15.0"
 tokio = { version = "1.42.0", features = ["full"] }
