--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -12,8 +12,10 @@ jobs:
     - uses: actions/checkout@v4
     - name: Clippy
       run: cargo clippy
-    - name: Tests
-      run: cargo test
+    - name: Build test image
+      run: docker build ../../ -t test --target test -f ../../Dockerfile
+    - name: Run tests
+      run: docker run test
     - name: Fmt
       run: cargo fmt --check
 
