--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,18 +4,13 @@ on:
   push:
 
 jobs:
-  checks:
-
+  test:
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v4
-    - name: Clippy
-      run: cargo clippy
     - name: Build test image
       run: docker build . -t test --target test
     - name: Run tests
       run: docker run test
-    - name: Fmt
-      run: cargo fmt --check
 
